test/scc/ext/tm/semantic-errors/003.t
void test()
{
    switch(10)
    {
        case 10:
        _Atomic
        {
            case 20:
                break;
        }
    }
}